wrote functions to parse yelp & foursquare api results

--- a/docs/city_bikes.ipynb
+++ b/docs/city_bikes.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try to decipher the structure of the JSON & figure out how to extract the info that I need"
+    "## Figure out how to extract the info that I need from the JSON"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parse the JSON and insert the relevant info into a new df"
+    "## Parse the JSON & insert relevant info into a new df"
    ]
   },
   {
@@ -441,13 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# UNPICKLE CITYBIKES DF \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/citybikes_filled_df.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m df:\n\u001b[1;32m----> 3\u001b[0m     citybikes_df \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mload(df)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pickle' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# UNPICKLE CITYBIKES DF \n",
     "with open('../data/citybikes_filled_df.pickle', 'rb') as df:\n",
-    "    citybikes_filled_df = pickle.load(df)"
+    "    citybikes_df = pickle.load(df)"
    ]
   },
   {
