worked on parsing yelp & fsq api results

--- a/src/fsq_yelp_parsing.ipynb
+++ b/src/fsq_yelp_parsing.ipynb
@@ -2,7 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_fsq_places(citybikes_df, url, params, headers):\n",
+    "    citybikes_df = citybikes_df.copy()\n",
+    "    params = params.copy()\n",
+    "    headers = headers.copy()\n",
+    "\n",
+    "    cols = [\"fsq_id\", \"cat_id\", \"cat_name\", \"lat\", \"long\", \"name\", \"street_address\", \"zip\", \"locality\", \"distance\"]\n",
+    "    fsq_df = pd.DataFrame(columns=cols)\n",
+    "\n",
+    "    i = 0 \n",
+    "    for index, row in citybikes_df.iterrows():\n",
+    "        if i == 1:\n",
+    "            return list_of_fsq_results\n",
+    "        else:\n",
+    "            lat = row['latitude']\n",
+    "            long = row['longitude']\n",
+    "            params['ll'] = f'{lat},{long}'\n",
+    "            response = requests.request(\"GET\", url, params=params, headers=headers)\n",
+    "            data = response.json()\n",
+    "            fsq_parsing(data, fsq_df)\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
