worked on functions for parsing yelp & foursquare api results

--- a/docs/city_bikes.ipynb
+++ b/docs/city_bikes.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/citybikes_sanfran.pickle', 'wb') as citybikes_sanfran:\n",
-    "    pickle.dump(res, citybikes_sanfran)"
+    "# with open('../data/citybikes_sanfran.pickle', 'wb') as citybikes_sanfran:\n",
+    "#     pickle.dump(res, citybikes_sanfran)"
    ]
   },
   {
@@ -222,7 +222,6 @@
     "        \"empty_slots\", \"has_ebikes\", \"ebikes\", \"payment\", \"renting\", \"returning\"]\n",
     "\n",
     "citybikes_df = pd.DataFrame(columns=cols)\n",
-    "\n",
     "print(citybikes_df)"
    ]
   },
