--- a/src/fsq_yelp_parsing.ipynb
+++ b/src/fsq_yelp_parsing.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +24,19 @@
     "    cols = [\"fsq_id\", \"cat_id\", \"cat_name\", \"lat\", \"long\", \"name\", \"street_address\", \"zip\", \"locality\", \"distance\"]\n",
     "    fsq_df = pd.DataFrame(columns=cols)\n",
     "\n",
-    "    i = 0 \n",
     "    for index, row in citybikes_df.iterrows():\n",
-    "        if i == 1:\n",
-    "            return list_of_fsq_results\n",
-    "        else:\n",
-    "            lat = row['latitude']\n",
-    "            long = row['longitude']\n",
-    "            params['ll'] = f'{lat},{long}'\n",
-    "            response = requests.request(\"GET\", url, params=params, headers=headers)\n",
+    "        lat = row['latitude']\n",
+    "        long = row['longitude']\n",
+    "        params['ll'] = f'{lat},{long}'\n",
+    "        response = requests.get(url, params=params, headers=headers)  # Use requests.get for clarity\n",
+    "        if response.status_code == 200:  # Check if the request was successful\n",
     "            data = response.json()\n",
-    "            fsq_parsing(data, fsq_df)\n",
-    "            i += 1"
+    "            fsq_df = fsq_parsing(data, fsq_df)\n",
+    "        else:\n",
+    "            pass\n",
+    "        break  # Remove this line if you intend to process more than the first row\n",
+    "\n",
+    "    return yelp_df"
    ]
   },
   {
@@ -37,51 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fsq_parsing(api_results, blank_df):\n",
-    "    '''Takes an iterable API result and blank dataframe that you want to fill out. Currently it's designed for a very specific use-case but can be generalized.'''\n",
     "    filled_df = blank_df.copy()\n",
-    "    i = 0\n",
-    "    for x in api_results['results']:\n",
-    "        # fsq_id\n",
-    "        filled_df.loc[i, 'fsq_id'] = x[0].get('fsq_id', None)\n",
-    "        # cat_id\n",
-    "        filled_df.loc[i, 'cat_id'] = x[0]['categories'][0].get('id', None)\n",
-    "        # cat_name\n",
-    "        filled_df.loc[i, 'cat_name'] = x[0]['categories'][0].get('name', None)\n",
-    "        # lat\n",
-    "        filled_df.loc[i, 'lat'] = x[0]['geocodes']['main'].get('latitude', None)\n",
-    "        # long\n",
-    "        filled_df.loc[i, 'long'] = x[0]['geocodes']['main'].get('longitude', None)\n",
-    "        # name\n",
-    "        filled_df.loc[i, 'name'] = x[0].get('name', None)\n",
-    "        # street address\n",
-    "        filled_df.loc[i, 'street_address'] = x[0]['location'].get('address', None)\n",
-    "        # zip\n",
-    "        filled_df.loc[i, 'zip'] = x[0]['location'].get('postcode', None)\n",
-    "        # locality\n",
-    "        filled_df.loc[i, 'locality'] = x[0]['location'].get('locality', None)\n",
-    "        # distance from bike station\n",
-    "        filled_df.loc[i, 'distance'] = x[0].get('distance', None)\n",
-    "        i += 1\n",
-    "    return filled_df                         "
+    "    for place in api_results['results']:\n",
+    "        i = len(filled_df)\n",
+    "        # Simplified using direct assignment as index `i` will always refer to the next row\n",
+    "        filled_df.loc[i] = [\n",
+    "            place.get('fsq_id', None),\n",
+    "            place['categories'][0].get('id', None) if place['categories'] else None,\n",
+    "            place['categories'][0].get('name', None) if place['categories'] else None,\n",
+    "            place['geocodes']['main'].get('latitude', None),\n",
+    "            place['geocodes']['main'].get('longitude', None),\n",
+    "            place.get('name', None),\n",
+    "            place['location'].get('address', None),\n",
+    "            place['location'].get('postcode', None),\n",
+    "            place['location'].get('locality', None),\n",
+    "            place.get('distance', None)\n",
+    "        ]\n",
+    "    return filled_df"
    ]
   },
   {
@@ -104,6 +92,84 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_yelp_places(citybikes_df, url, params, headers):\n",
+    "    citybikes_df = citybikes_df.copy()\n",
+    "    params = params.copy()\n",
+    "    headers = headers.copy()\n",
+    "\n",
+    "    cols = [\n",
+    "        \"reference_bike_stn\", \"yelp_id\", \"cat_alias\", \"lat\", \"long\", \"name\", \"street_address\", \"zip\",\n",
+    "        \"city\", \"price\", \"rating\", \"review_count\", \"distance_from_bike_stn\"\n",
+    "    ]\n",
+    "    yelp_df = pd.DataFrame(columns=cols)\n",
+    "\n",
+    "    for index, row in citybikes_df.iterrows():\n",
+    "        lat = row['latitude']\n",
+    "        long = row['longitude']\n",
+    "        bike_stn_id = row['id']\n",
+    "        params['latitude'] = f'{lat}'\n",
+    "        params['longitude'] = f'{long}'\n",
+    "        response = requests.get(\n",
+    "            url, params=params,\n",
+    "            headers=headers)  # Use requests.get for clarity\n",
+    "        if response.status_code == 200:  # Check if the request was successful\n",
+    "            data = response.json()\n",
+    "            yelp_df = yelp_parsing(data, yelp_df, bike_stn_id)\n",
+    "        else:\n",
+    "            pass\n",
+    "        break  # Remove this line if you intend to process more than the first row\n",
+    "\n",
+    "    return yelp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yelp_parsing(api_results, blank_df, bike_stn_id):\n",
+    "    filled_df = blank_df.copy()\n",
+    "    for place in api_results['businesses']:\n",
+    "        i = len(filled_df)\n",
+    "        # Simplified using direct assignment as index `i` will always refer to the next row\n",
+    "        filled_df.loc[i] = [\n",
+    "            bike_stn_id, \n",
+    "            place.get('id', None),\n",
+    "            place['categories'][0].get('alias', None),\n",
+    "            place['coordinates'].get('latitude', None),\n",
+    "            place['coordinates'].get('longitude', None),\n",
+    "            place.get('name', None),\n",
+    "            place['location'].get('address1', None),\n",
+    "            place['location'].get('zip_code', None),\n",
+    "            place['location'].get('city', None),\n",
+    "            place.get('price', None),\n",
+    "            place.get('rating', None),\n",
+    "            place.get('review_count', None),\n",
+    "            place.get('distance', None)]\n",
+    "    return filled_df"
+   ]
   },
   {
    "cell_type": "code",
