cleaned up code, added docstrings

--- a/docs/joining_data_and_EDA.ipynb
+++ b/docs/joining_data_and_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
    ],
    "source": [
     "# There is one repeated venue that remains\n",
-    "# It looks like a mistake was probably make on Yelp's part \n",
+    "# It looks like a mistake probably make on Yelp's part \n",
     "filtered = combined_df[(combined_df['reference_bike_stn'] == '99889922f5848c7ca3e2c2f740cebd9f') & (combined_df['name'] == 'Sunrise Deli')]\n",
     "filtered"
    ]
