--- a/docs/city_bikes.ipynb
+++ b/docs/city_bikes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('..\\\\src')\n",
-    "import citybikes_parsing\n"
+    "import citybikes_parsing"
    ]
   },
   {
@@ -434,27 +434,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/citybikes_filled_df.pickle', 'wb') as df:\n",
-    "    pickle.dump(citybikes_filled_df, df)"
+    "# with open('../data/citybikes_filled_df.pickle', 'wb') as df:\n",
+    "#     pickle.dump(citybikes_filled_df, df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# UNPICKLE CITYBIKES DF \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/citybikes_filled_df.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m df:\n\u001b[1;32m----> 3\u001b[0m     citybikes_df \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mload(df)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pickle' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# UNPICKLE CITYBIKES DF \n",
     "with open('../data/citybikes_filled_df.pickle', 'rb') as df:\n",
@@ -492,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
