--- a/docs/city_bikes.ipynb
+++ b/docs/city_bikes.ipynb
@@ -76,11 +76,8 @@
     }
    ],
    "source": [
-    "# UNPICKLE CITYBIKES API RESPONSE JSON \n",
-    "with open('../data/citybikes_sanfran.pickle', 'rb') as citybikes_sanfran:\n",
-    "    citybikes_sanfran2 = pickle.load(citybikes_sanfran)\n",
-    "\n",
-    "print(citybikes_sanfran2)"
+    "# with open('../data/citybikes_sanfran.pickle', 'wb') as citybikes_sanfran:\n",
+    "#     pickle.dump(res, citybikes_sanfran)"
    ]
   },
   {
@@ -387,9 +384,9 @@
     }
    ],
    "source": [
-    "# Parse dict returned by Citybikes API into a blank df with appropriate headers, using a function from another module \n",
-    "citybikes_filled_df = citybikes_parsing.citybikes_parsing(citybikes_sanfran2, citybikes_df)\n",
-    "citybikes_filled_df.head()"
+    "# # Parse dict returned by Citybikes API into a blank df with appropriate headers, using a function from another module \n",
+    "# citybikes_filled_df = citybikes_parsing.citybikes_parsing(citybikes_sanfran2, citybikes_df)\n",
+    "# citybikes_filled_df.head()"
    ]
   },
   {
